--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
+    "@tensorflow/tfjs": "^3.20.0",
+    "@tensorflow/tfjs-node": "^3.20.0",
+    "axios": "^0.27.2",
+    "framer-motion": "^7.3.1",
     "next": "12.2.5",
+    "node-opencv": "^0.0.2-security",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.54.8",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.7.15",
